RESOLVED FIXED117363
fourthTier: don't insert ForceOSRExits except for inadequate coverage
https://bugs.webkit.org/show_bug.cgi?id=117363
Summary fourthTier: don't insert ForceOSRExits except for inadequate coverage
Filip Pizlo
Reported 2013-06-07 15:24:19 PDT
Previously (in http://trac.webkit.org/changeset/151303) I made it so that we inserted ForceOSRExits more eagerly. I now think it's better to have contradictions execute normally and exit with full OSR exit profiling. It's better at catching the few cases where the DFG will end up with different types than the baseline engines.
Attachments
work in progress (22.04 KB, patch)
2013-06-07 15:26 PDT, Filip Pizlo
no flags
the patch (29.14 KB, patch)
2013-06-07 15:49 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-06-07 15:26:32 PDT
Created attachment 204071 [details] work in progress
Filip Pizlo
Comment 2 2013-06-07 15:49:10 PDT
Created attachment 204072 [details] the patch
Mark Hahnenberg
Comment 3 2013-06-07 16:01:42 PDT
Comment on attachment 204072 [details] the patch r=me
Filip Pizlo
Comment 4 2013-06-07 17:06:16 PDT
Oliver Hunt
Comment 5 2013-09-20 12:21:47 PDT
This is leading to crashes on iCloud.com :(
Note You need to log in before you can comment on or make changes to this bug.